# doc-qna

./: README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/: endpoints.py
backend/app/core/: chunker.py  doc_store.py  document_store.py  embedder.py  indexer.py  llm.py  pdf_extractor.py  retriever.py  vector_index.py
backend/app/models/: query.py  upload.py
backend/test/: test_embedding.py  test_llm.py  test_query.py  test_retriever.py  test_tokenizer.py
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/components/: DocList.tsx  DocumentUpload.tsx  QNASection.tsx  QuestionForm.tsx  Sidebar.tsx
frontend/src/types/: index.ts
server/: .gitignore  pyproject.toml
web/: index.html
web/src/: App.tsx  index.css
